--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <title>MeltingScreen</title>
 	<meta charset="utf-8" />
+
+    <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css" />
+    <script src="semantic/semantic.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="index.css" />
+
 </head>
 <body>
-
+    <h1>TestWebsite</h1>
 </body>
 </html>
