--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>MeltingScreen</title>
@@ -6,14 +6,13 @@
 
     <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css" />
     <script src="semantic/semantic.min.js"></script>
-
     <link rel="stylesheet" type="text/css" href="index.css" />
 
 </head>
 <body>
 
     <div id="background-image">
-        
+        <button class="ui primary basic button" id="test">Primary</button>
     </div>
 </body>
 </html>
