--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="background-image">
-        <button class="ui primary basic button" id="test">Primary</button>
+         <button class="ui inverted orange basic button" id="test">Basic Orange</button>
     </div>
 </body>
 </html>
