--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
     <div id="background-image">
-         <button class="ui inverted orange basic button" id="test">Basic Orange</button>
+         <button class="ui inverted orange basic button" id="btn_redirect">View on Github</button>
     </div>
+    
 </body>
 </html>
