--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="background-image">
-         <button class="ui inverted orange basic button" id="btn_redirect">View on Github</button>
+         <button class="ui inverted orange basic button" id="btn_redirect" onclick="location.href='https://github.com/FireFlame74/MeltingScreen'">View on Github</button>
     </div>
     
 </body>
