--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
             </div>
         </div>
         <div class="row"></div>
-        <div class="column">
-            <button class="ui inverted orange basic button" id="btn_redirect" onclick="location.href='https://github.com/FireFlame74/MeltingScreen'">View on Github</button>
+        <div class="row">
+            <div class="column">
+                <button class="ui inverted orange basic button" id="btn_redirect" onclick="location.href='https://github.com/FireFlame74/MeltingScreen'">View on Github</button>
+            </div>
         </div>
+        <div class="row">
+            <p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet lorem quis turpis elementum tempor. Phasellus id porttitor magna, vel aliquam arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus scelerisque ultricies ex eu dignissim. Integer a ornare ipsum. Duis vel mollis felis. Phasellus at laoreet lorem, id pharetra ipsum. Sed faucibus hendrerit justo, nec tristique ipsum viverra nec. Integer in elit et sem suscipit volutpat et sed arcu. Nunc sed nulla non diam vestibulum accumsan quis at tortor. Etiam lobortis nibh vel sem rutrum, non iaculis ligula euismod. Aenean in lorem mi. Nam eget placerat turpis. Ut tempor est non neque elementum, sed sollicitudin ipsum porttitor.</p>
+        </div>
+        
     </div>
     
     <div id="footer">
