added link to popups

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </script>
     
     <div id="footer">
-        <img id="sfigoico" src="https://www.gravatar.com/avatar/ca2419a7764bceb5f5fcd3397398d397" data-title="Sandro Figo" data-variation="inverted"  class="ui avatar image">
-        <img id="tmoldanico" src="https://www.gravatar.com/avatar/66bbf3647efba47765fb1fef0927e4c7" data-title="Tobias Moldan" data-variation="inverted"  class="ui avatar image">
+        <img id="sfigoico" src="https://www.gravatar.com/avatar/ca2419a7764bceb5f5fcd3397398d397" data-title="Sandro Figo" data-variation="inverted"  class="ui avatar image" onclick="location.href='https://github.com/FireFlame74'">
+        <img id="tmoldanico" src="https://www.gravatar.com/avatar/66bbf3647efba47765fb1fef0927e4c7" data-title="Tobias Moldan" data-variation="inverted"  class="ui avatar image" onclick="location.href='https://github.com/tmoldan'">
     </div>
     
     <script>
